# LBM_Project

./: .gitignore  CMakeLists.txt  cudaLidDrivenCavity.cu  cudaSmLidDrivenCavity.cu  display.py  run.sh  serialLidDrivenCavity.cpp  serialpoisseule.cpp  syclLidDrivenCavity.cpp
Plots/: plotlbm.py
SerialCodes/: plotlbm.py  seriallbmv1.cpp
include/: cudalbm.h  seriallbm.hpp  utils.hpp
src/: mainfile.cpp  mainfile.cu  sycl_mainfile.cpp
src/CUDACodes/: cudalbm.cu  cudalbm_AOS.cu  cudalbm_SM.cu  cudalbm_SOA.cu
src/SerialCodes/: plotlbm.py  seriallbmv1.cpp
src/utils/: utils.cpp
